修改 静态文件管理方式
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/new31/templates/404.html
+++ b/new31/templates/404.html
@@ -6,16 +6,16 @@
     <meta name="Keywords" content="{% block keywords %}31客,31客蛋糕,蛋糕{% endblock %}" />
     <meta name="Description" content="{% block description %}蛋糕电子商务{% endblock %}" />
     {% block meta %}{% endblock %}
-    <link rel="stylesheet" href="{{ STATIC_URL }}shop/css/base.css" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}shop/css/style.css" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.zebra_datepicker.css" />
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.jgd.dropdown.min.css" />
-    <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico" type="image/x-icon" />
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.min.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.zebra_datepicker.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.dialog.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.jgd.dropdown.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}shop/js/base.configuration.js"></script>
+    <link rel="stylesheet" href="/css/shop/base.css" />
+    <link rel="stylesheet" href="/css/shop/style.css" />
+    <link rel="stylesheet" href="/css/jquery.zebra_datepicker.css" />
+    <link rel="stylesheet" href="/css/jquery.jgd.dropdown.min.css" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.zebra_datepicker.js"></script>
+    <script type="text/javascript" src="/js/jquery.dialog.js"></script>
+    <script type="text/javascript" src="/js/jquery.jgd.dropdown.js"></script>
+    <script type="text/javascript" src="/js/shop/base.configuration.js"></script>
 {% block js %}{% endblock %}
     <!--[if IE 6]>
     <script type="text/javascript" src="/js/DD_belatedPNG.js"></script>
