--- a/tag/templates/tag.htm
+++ b/tag/templates/tag.htm
@@ -41,121 +41,121 @@
             <ul class="user list_album_user">
                 <li>
                     <a href="/tag/德国烤奶酪/">
-                        <img width="210" height="157" src="/m/3133002s.jpg" alt="德国烤奶酪" />
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3133002s.jpg" alt="德国烤奶酪" />
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/香浓巧克力/">
-                        <img width="210" height="157" src="/m/3133001s.jpg" alt="香浓巧克力" />
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3133001s.jpg" alt="香浓巧克力" />
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3133003s.jpg" alt="七色地图">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3133003s.jpg" alt="七色地图">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3133004b.jpg" alt="市井布衣">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3133004b.jpg" alt="市井布衣">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3155002b.jpg" alt="库因兹">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3155002b.jpg" alt="库因兹">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3177008b.jpg" alt="原生泰">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3177008b.jpg" alt="原生泰">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3177012b.jpg" alt="笑微微">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3177012b.jpg" alt="笑微微">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3166006b.jpg" alt="陈金成">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3166006b.jpg" alt="陈金成">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3199002b.jpg" alt="陈思梦">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3199002b.jpg" alt="陈思梦">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3177004b.jpg" alt="慕蓉香">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3177004b.jpg" alt="慕蓉香">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3199004b.jpg" alt="阿骆">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3199004b.jpg" alt="阿骆">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3133012s.jpg" alt="lLeo">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3133012s.jpg" alt="lLeo">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3133016s.jpg" alt="lioncat">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3133016s.jpg" alt="lioncat">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3133013b.jpg" alt="laowan">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3133013b.jpg" alt="laowan">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3133001b.jpg" alt="张晨">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3133001b.jpg" alt="张晨">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3133006s.jpg" alt="句号姑娘">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3133006s.jpg" alt="句号姑娘">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3133022s.jpg" alt="猪正">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3133022s.jpg" alt="猪正">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3133020s.jpg" alt="飘零忘川">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3133020s.jpg" alt="飘零忘川">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3133021b.jpg" alt="小小">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3133021b.jpg" alt="小小">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
                 <li>
                     <a href="/tag/">
-                        <img width="210" height="157" src="/m/3133019b.jpg" alt="小悠拉">
+                        <img width="210" height="157" src="{{ MEDIA_URL }}images/3133019b.jpg" alt="小悠拉">
                     </a>
                     <span class="username fl">151****45</span>
                 </li>
