--- a/item/templates/itemadmin.htm
+++ b/item/templates/itemadmin.htm
@@ -25,8 +25,8 @@
                 <td align="center" class="goods_id cp">{{ i.id }}</td>
                 <td><a href="/item/edit/{{ i.id }}/" title="编辑" class="editItem">{{ i.itemName }}</a></td>
                 <td align="center">{{ i.sn }}</td>
-                <td align="center" class="onLine cp"><img src="/images/{% if i.onLine %}yes{% else %}no{% endif %}.gif" /></td>
-                <td align="center" class="show cp"><img src="/images/{% if i.show %}yes{% else %}no{% endif %}.gif" /></td>
+                <td align="center" class="onLine cp"><img src="{{ STATIC_URL }}images/{% if i.onLine %}yes{% else %}no{% endif %}.gif" /></td>
+                <td align="center" class="show cp"><img src="{{ STATIC_URL }}images/{% if i.show %}yes{% else %}no{% endif %}.gif" /></td>
               </tr>
 {% endfor %}
             </tbody>
